Fix hero logo overlap

--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,8 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -159,6 +161,9 @@
   img, video {
     max-width: 100%;
     height: auto;
+    image-rendering: -webkit-optimize-contrast;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
   }
 
   [dir="rtl"] {
